--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ FLUSH_INTERVAL=500ms
 LOG_LEVEL=INFO
 
 # Server Port (if using TCP server)
-# PORT=8080
+PORT=5656
 
 # Example production settings:
 # DB_PATH=/var/lib/rdbms/data
